# build-info

./: .editorconfig  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  deny.toml  publish_new_version.sh  tag_new_version.sh
.github/workflows/: cargo-outdated.yml  clippy-annotations.yml  rust-ci.yml
build-info/: Cargo.toml
build-info-build/: Cargo.toml
build-info-build/src/: compiler.rs  crate_info.rs  lib.rs  timestamp.rs  version_control.rs
build-info-build/src/build_script_options/: compiler.rs  crate_info.rs  mod.rs  target.rs  timestamp.rs
build-info-build/src/build_script_options/version_control/: git.rs  mod.rs
build-info-build/src/version_control/: git.rs  mod.rs
build-info-common/: Cargo.toml
build-info-common/src/: display.rs  lib.rs  pyo3_methods.rs  versioned_string.rs
build-info-proc/: Cargo.toml
build-info-proc/src/: lib.rs
build-info-proc/src/format/: eval.rs  indexed_string_value.rs  mod.rs  syntax.rs  types.rs  value.rs
build-info-proc/src/format/eval/: macros.rs  mod.rs
build-info-proc/src/format/value/: bool.rs  build_info.rs  char.rs  compiler_channel.rs  compiler_info.rs  cpu_info.rs  crate_info.rs  endianness.rs  functions.rs  git_info.rs  int.rs  macros.rs  mod.rs  optimization_level.rs  option.rs  string.rs  target_info.rs  vec.rs  version_control.rs
build-info-proc/src/format/value/chrono/: date_time.rs  mod.rs  naive_date.rs
build-info-proc/src/format/value/semver/: identifier.rs  mod.rs  version.rs
build-info-proc/src/function/: init_value.rs  mod.rs
build-info/src/: lib.rs
dependency-tree/: Cargo.toml  build.rs
dependency-tree/src/: main.rs
sample/: Cargo.toml  build.rs
sample/src/: main.rs
versionator/: Cargo.toml
versionator-build/: Cargo.toml
versionator-build/src/: cargo.rs  compiler.rs  crate_info.rs  lib.rs  version_control.rs
versionator-common/: Cargo.toml
versionator-common/src/: lib.rs  to_tokens_ext.rs
versionator-proc/: Cargo.toml  build.rs
versionator-proc/src/: compiler.rs  expression.rs  function.rs  init_value.rs  lib.rs  version_control.rs
versionator-proc/src/expression/: indexed_init_value.rs  mod.rs
versionator-proc/src/format/: indexed_string_value.rs  mod.rs  string_value.rs
versionator-proc/src/function/: init_value.rs  mod.rs
versionator/examples/: simple.rs
versionator/src/: compiler.rs  lib.rs  version_control.rs
