[package]
name = "build-info-build"
version = "0.0.36"
description = "Provides the data consumed by the build-info crate. Use as a build-dependency."
readme = "../README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
repository = "https://github.com/danielschemmel/build-info/"
license = "MIT OR Apache-2.0"

edition = "2021"
rust-version = "1.70.0"

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
cargo_metadata = "0.18"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
git2 = { version = "0.18.0", default-features = false, optional = true }
glob = "0.3"
pretty_assertions = "1"
rustc_version = "0.4"
serde_json = "1"
zstd = "0.13"

build-info-common = { version = "=0.0.36", path = "../build-info-common", features = ["serde"] }

[features]
default = ["git"]
git = ["git2"]
