[package]
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
description = "Provides the data consumed by the build-info crate. Use as a build-dependency."
name = "build-info-build"
readme = "../README.md"
version = "0.0.43"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
cargo_metadata = "0.23.0"
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
ciborium = "0.2.2"
git2 = { version = "0.20.0", default-features = false, optional = true }
glob = "0.3"
pretty_assertions = "1"
rustc_version = "0.4"
serde_json = "1"
z85 = "3.0.6"
zstd = "0.13"

build-info-common = { version = "=0.0.43", path = "../build-info-common", features = ["serde"] }

[features]
default = ["git"]
git = ["git2"]
