[package]
name = "build-info-common"
version = "0.0.37"
description = "Part of the build-info and build-info-build crates: This crate provides the types that are serialized by build-info-build and used by build-info."
readme = "../README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
repository = "https://github.com/danielschemmel/build-info/"
license = "MIT OR Apache-2.0"

edition = "2021"
rust-version = "1.75.0"

[dependencies]
chrono = { version = "0.4.23", default-features = false }
derive_more = { version = "1", default-features = false, features = ["display"]}
semver = "1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "semver/serde", "chrono/serde"]
