[package]
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
description = "Part of the build-info and build-info-build crates: This crate provides the types that are serialized by build-info-build and used by build-info."
name = "build-info-common"
readme = "../README.md"
version = "0.0.41"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4.23", default-features = false }
derive_more = { version = "2.0.1", default-features = false, features = ["display"] }
semver = "1"
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
serde = ["chrono/serde", "dep:serde", "semver/serde"]
