[package]
name = "build-info-proc"
version = "0.0.40"
description = "Part of the build-info crate: This crate provides the proc-macros."
readme = "../README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
repository = "https://github.com/danielschemmel/build-info/"
license = "MIT OR Apache-2.0"

edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = "1"
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
num-bigint = "0.4"
num-traits = "0.2"
proc-macro2 = "1"
proc-macro-error2 = "2.0"
quote = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }
zstd = "0.13"

build-info-common = { version = "=0.0.40", path = "../build-info-common", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
runtime = []
oxford-comma = []
