[package]
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
description = "Part of the build-info crate: This crate provides the proc-macros."
name = "build-info-proc"
readme = "../README.md"
version = "0.0.41"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
anyhow = "1"
base64 = "0.22"
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
num-bigint = "0.4"
num-traits = "0.2"
proc-macro-error2 = "2.0"
proc-macro2 = "1"
quote = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }
zstd = "0.13"

build-info-common = { version = "=0.0.41", path = "../build-info-common", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"

[features]
default = []
oxford-comma = []
runtime = []
