[package]
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
description = "Collects build-information of your Rust crate."
name = "build-info"
readme = "README.md"
version = "0.0.41"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bincode = { version = "2", features = ["serde"], optional = true }

build-info-common = { version = "=0.0.41", path = "../build-info-common", optional = true, features = ["serde"] }
build-info-proc = { version = "=0.0.41", path = "../build-info-proc" }

[features]
default = ["runtime"]
oxford-comma = ["build-info-proc/oxford-comma"]
runtime = ["build-info-proc/runtime", "dep:bincode", "dep:build-info-common"]
