[package]
name = "dependency-tree"
version = "0.0.26"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
edition = "2021"
publish = false
repository = "https://github.com/danielschemmel/build-info/"
description = "A sample program that uses the build-info crate to print a tree of all dependencies."
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
build-info = { version = "=0.0.26", path = "../build-info" }

[build-dependencies]
build-info-build = { version = "=0.0.26", path = "../build-info-build" }
