[package]
name = "dependency-tree"
version = "0.0.41"
description = "A sample program that uses the build-info crate to print a tree of all dependencies."
readme = "../README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
publish = false

repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
build-info = { version = "=0.0.41", path = "../build-info" }

[build-dependencies]
build-info-build = { version = "=0.0.41", path = "../build-info-build" }
