[package]
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
description = "A sample program that uses the build-info crate to print a tree of all dependencies."
name = "dependency-tree"
publish = false
readme = "../README.md"
version = "0.0.42"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
build-info = { version = "=0.0.42", path = "../build-info" }

[build-dependencies]
build-info-build = { version = "=0.0.42", path = "../build-info-build" }
