[package]
name = "sample"
version = "0.0.40"
description = "A sample program that uses the build-info crate."
readme = "../README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
edition.workspace = true
rust-version.workspace = true
publish = false
repository = "https://github.com/danielschemmel/build-info/"
license = "MIT OR Apache-2.0"

[dependencies]
build-info = { version = "=0.0.40", path = "../build-info" }

[build-dependencies]
build-info-build = { version = "=0.0.40", path = "../build-info-build" }
