[package]
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
description = "A sample program that uses the build-info crate."
name = "sample"
publish = false
readme = "../README.md"
version = "0.0.41"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
build-info = { version = "=0.0.41", path = "../build-info" }

[build-dependencies]
build-info-build = { version = "=0.0.41", path = "../build-info-build" }
