[package]
name = "versionator-build"
version = "0.1.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
git2 = { version = "0.13", default-features = false }
rustc_version = "0.2"
serde_json = "1.0"
versionator-common = { path = "../versionator-common" }
