[package]
name = "versionator-build"
version = "0.0.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
git2 = { version = "0.13", default-features = false }
glob = "0.3"
rustc_version = "0.2"
serde_json = "1.0"
toml = "0.5"
versionator = { path = "../versionator", features = ["serde"] }
