[package]
name = "versionator-common"
version = "0.0.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
derive_more = "0.99"
proc-macro2 = { version = "1.0", optional = true }
proc-macro-crate = { version = "0.1", optional = true }
quote = { version = "1.0", optional = true }
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
proc-macro = ["proc-macro2", "proc-macro-crate", "quote"]
