[package]
name = "versionator-common"
version = "0.0.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
chrono = { version = "0.4" }
derive_more = "0.99"
semver = { version = "0.9" }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
enable-serde = ["serde", "semver/serde", "chrono/serde"]
