[package]
name = "versionator-proc"
version = "0.1.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
ron = "0.5"
syn = "1.0"
versionator-common = { path = "../versionator-common", features = ["proc-macro"] }
