[package]
name = "versionator-proc"
version = "0.0.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
proc-macro-crate = "0.1"
proc-macro-hack = "0.5"
quote = "1.0"
syn = "1.0"
versionator-common = { path = "../versionator-common", features = ["proc-macro"] }
