[package]
name = "versionator-proc"
version = "0.0.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
chrono = { version = "0.4", default_features = true }
proc-macro2 = "1"
proc-macro-crate = "0.1"
proc-macro-hack = "0.5"
quote = "1"
serde_json = "1"
syn = "1"
versionator-common = { path = "../versionator-common" }

[features]
default = []
runtime = []
