[package]
name = "versionator"
version = "0.0.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
lazy_static = "1.4"
proc-macro-hack = "0.5"
versionator-common = { path = "../versionator-common" }
versionator-proc = { path = "../versionator-proc" }

[features]
default = []
serde = ["versionator-common/enable-serde"]
