[package]
name = "versionator"
version = "0.0.0"
authors = ["Daniel Schemmel <daniel.schemmel@comsys.rwth-aachen.de>"]
edition = "2018"
publish = false

[dependencies]
lazy_static = { version = "1", optional = true }
proc-macro-hack = "0.5"
proc-macro-nested = { version = "0.1", optional = true }
versionator-common = { path = "../versionator-common" }
versionator-proc = { path = "../versionator-proc" }

[features]
default = ["runtime"]
nested = ["proc-macro-nested"]
runtime = ["lazy_static", "versionator-proc/runtime"]
chrono = ["versionator-common/full-chrono"]
serde = ["versionator-common/enable-serde"]
